fix(user-service):     1. добавлен ResponseEntity ко всем эндпоинтам     2. ResponseDto преобразованы из class в record с добавлением внутреннего билд метода